--- a/src/index.html
+++ b/src/index.html
@@ -51,5 +51,6 @@
         </div>
     </div>
 </body>
+<script src="../assets/jq/jquery.js"></script>
 <script src="../assets/js/index.js"></script>
 </html>
